--- a/JobCrawler/Views/Jobs/Index.cshtml
+++ b/JobCrawler/Views/Jobs/Index.cshtml
@@ -1,5 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    Layout = "_Layout";
+}
+<h1>page 2 not 1!!</h1>
+<partial name="_JobInput" />
+
+@section Scripts {
+    <script src="~/js/jobs.js" type="text/javascript"></script>
 }
